Proyecto_DLP_1/src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		INT_CONSTANT=39, REAL_CONSTANT=40, CHAR_CONSTANT=41, IDENT=42, LINE_COMMENT=43, 
		MULTILINE_COMMENT=44, WHITESPACE=45;
	public static final int
		RULE_start = 0, RULE_bloques = 1, RULE_bloque = 2, RULE_definicion_variable_global = 3, 
		RULE_struct = 4, RULE_definiciones = 5, RULE_definicion_campo_struct = 6, 
		RULE_funcion = 7, RULE_parametros = 8, RULE_parametro = 9, RULE_retorno = 10, 
		RULE_locales = 11, RULE_definicion_variable_local = 12, RULE_sentencias = 13, 
		RULE_sentencia = 14, RULE_sentencia_asignacion = 15, RULE_sentencia_print = 16, 
		RULE_sentencia_read = 17, RULE_sentencia_if = 18, RULE_sentencia_while = 19, 
		RULE_sentencia_llamada_funcion = 20, RULE_sentencia_return = 21, RULE_tipo = 22, 
		RULE_array = 23, RULE_expr = 24, RULE_parametros_llamada = 25, RULE_operador = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "bloques", "bloque", "definicion_variable_global", "struct", 
			"definiciones", "definicion_campo_struct", "funcion", "parametros", "parametro", 
			"retorno", "locales", "definicion_variable_local", "sentencias", "sentencia", 
			"sentencia_asignacion", "sentencia_print", "sentencia_read", "sentencia_if", 
			"sentencia_while", "sentencia_llamada_funcion", "sentencia_return", "tipo", 
			"array", "expr", "parametros_llamada", "operador"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "':'", "';'", "'struct'", "'{'", "'}'", "'('", "')'", 
			"','", "'='", "'print'", "'printsp'", "'println'", "'read'", "'if'", 
			"'else'", "'while'", "'return'", "'int'", "'float'", "'char'", "'['", 
			"']'", "'.'", "'!'", "'cast'", "'<'", "'>'", "'*'", "'/'", "'+'", "'-'", 
			"'=='", "'!='", "'>='", "'<='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "IDENT", 
			"LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public BloquesContext bloques;
		public BloquesContext bloques() {
			return getRuleContext(BloquesContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			((StartContext)_localctx).bloques = bloques();
			 ((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).bloques.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloquesContext extends ParserRuleContext {
		public List<Bloque> ast = new ArrayList<Bloque>();
		public BloqueContext bloque;
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<BloqueContext> bloque() {
			return getRuleContexts(BloqueContext.class);
		}
		public BloqueContext bloque(int i) {
			return getRuleContext(BloqueContext.class,i);
		}
		public BloquesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloques; }
	}

	public final BloquesContext bloques() throws RecognitionException {
		BloquesContext _localctx = new BloquesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloques);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << IDENT))) != 0)) {
				{
				{
				setState(57);
				((BloquesContext)_localctx).bloque = bloque();
				 _localctx.ast.add(((BloquesContext)_localctx).bloque.ast); 
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueContext extends ParserRuleContext {
		public Bloque ast;
		public Definicion_variable_globalContext definicion_variable_global;
		public StructContext struct;
		public FuncionContext funcion;
		public Definicion_variable_globalContext definicion_variable_global() {
			return getRuleContext(Definicion_variable_globalContext.class,0);
		}
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bloque);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				((BloqueContext)_localctx).definicion_variable_global = definicion_variable_global();
				 ((BloqueContext)_localctx).ast =  ((BloqueContext)_localctx).definicion_variable_global.ast; 
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				((BloqueContext)_localctx).struct = struct();
				 ((BloqueContext)_localctx).ast =  ((BloqueContext)_localctx).struct.ast; 
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				((BloqueContext)_localctx).funcion = funcion();
				 ((BloqueContext)_localctx).ast =  ((BloqueContext)_localctx).funcion.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definicion_variable_globalContext extends ParserRuleContext {
		public Definicion_variable_global ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Definicion_variable_globalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_variable_global; }
	}

	public final Definicion_variable_globalContext definicion_variable_global() throws RecognitionException {
		Definicion_variable_globalContext _localctx = new Definicion_variable_globalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definicion_variable_global);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__0);
			setState(79);
			((Definicion_variable_globalContext)_localctx).IDENT = match(IDENT);
			setState(80);
			match(T__1);
			setState(81);
			((Definicion_variable_globalContext)_localctx).tipo = tipo();
			setState(82);
			match(T__2);
			 ((Definicion_variable_globalContext)_localctx).ast =  new Definicion_variable_global(((Definicion_variable_globalContext)_localctx).IDENT, ((Definicion_variable_globalContext)_localctx).tipo.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructContext extends ParserRuleContext {
		public Struct ast;
		public Token IDENT;
		public DefinicionesContext definiciones;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public DefinicionesContext definiciones() {
			return getRuleContext(DefinicionesContext.class,0);
		}
		public StructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct; }
	}

	public final StructContext struct() throws RecognitionException {
		StructContext _localctx = new StructContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_struct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__3);
			setState(86);
			((StructContext)_localctx).IDENT = match(IDENT);
			setState(87);
			match(T__4);
			setState(88);
			((StructContext)_localctx).definiciones = definiciones();
			setState(89);
			match(T__5);
			setState(90);
			match(T__2);
			 ((StructContext)_localctx).ast =  new Struct(((StructContext)_localctx).IDENT, ((StructContext)_localctx).definiciones.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionesContext extends ParserRuleContext {
		public List<Definicion_campo_struct> ast = new ArrayList<Definicion_campo_struct>();
		public Definicion_campo_structContext definicion_campo_struct;
		public List<Definicion_campo_structContext> definicion_campo_struct() {
			return getRuleContexts(Definicion_campo_structContext.class);
		}
		public Definicion_campo_structContext definicion_campo_struct(int i) {
			return getRuleContext(Definicion_campo_structContext.class,i);
		}
		public DefinicionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definiciones; }
	}

	public final DefinicionesContext definiciones() throws RecognitionException {
		DefinicionesContext _localctx = new DefinicionesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_definiciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(93);
				((DefinicionesContext)_localctx).definicion_campo_struct = definicion_campo_struct();
				 _localctx.ast.add(((DefinicionesContext)_localctx).definicion_campo_struct.ast); 
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definicion_campo_structContext extends ParserRuleContext {
		public Definicion_campo_struct ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Definicion_campo_structContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_campo_struct; }
	}

	public final Definicion_campo_structContext definicion_campo_struct() throws RecognitionException {
		Definicion_campo_structContext _localctx = new Definicion_campo_structContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_definicion_campo_struct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((Definicion_campo_structContext)_localctx).IDENT = match(IDENT);
			setState(102);
			match(T__1);
			setState(103);
			((Definicion_campo_structContext)_localctx).tipo = tipo();
			setState(104);
			match(T__2);
			 ((Definicion_campo_structContext)_localctx).ast =  new Definicion_campo_struct(((Definicion_campo_structContext)_localctx).IDENT, ((Definicion_campo_structContext)_localctx).tipo.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public Funcion ast;
		public Token IDENT;
		public ParametrosContext parametros;
		public RetornoContext retorno;
		public LocalesContext locales;
		public SentenciasContext sentencias;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public LocalesContext locales() {
			return getRuleContext(LocalesContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			((FuncionContext)_localctx).IDENT = match(IDENT);
			setState(108);
			match(T__6);
			setState(109);
			((FuncionContext)_localctx).parametros = parametros();
			setState(110);
			match(T__7);
			setState(111);
			((FuncionContext)_localctx).retorno = retorno();
			setState(112);
			match(T__4);
			setState(113);
			((FuncionContext)_localctx).locales = locales();
			setState(114);
			((FuncionContext)_localctx).sentencias = sentencias();
			setState(115);
			match(T__5);
			 ((FuncionContext)_localctx).ast =  new Funcion(((FuncionContext)_localctx).IDENT, ((FuncionContext)_localctx).parametros.ast, ((FuncionContext)_localctx).retorno.ast, ((FuncionContext)_localctx).locales.ast, ((FuncionContext)_localctx).sentencias.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public List<Parametro> ast = new ArrayList<Parametro>();
		public ParametroContext parametro;
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(118);
				((ParametrosContext)_localctx).parametro = parametro();
				 _localctx.ast.add(((ParametrosContext)_localctx).parametro.ast); 
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(120);
					match(T__8);
					setState(121);
					((ParametrosContext)_localctx).parametro = parametro();
					 _localctx.ast.add(((ParametrosContext)_localctx).parametro.ast); 
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametroContext extends ParserRuleContext {
		public Parametro ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parametro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			((ParametroContext)_localctx).IDENT = match(IDENT);
			setState(132);
			match(T__1);
			setState(133);
			((ParametroContext)_localctx).tipo = tipo();
			 ((ParametroContext)_localctx).ast =  new Parametro(((ParametroContext)_localctx).IDENT, ((ParametroContext)_localctx).tipo.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetornoContext extends ParserRuleContext {
		public Tipo ast;
		public TipoContext tipo;
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public RetornoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retorno; }
	}

	public final RetornoContext retorno() throws RecognitionException {
		RetornoContext _localctx = new RetornoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_retorno);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(136);
				match(T__1);
				setState(137);
				((RetornoContext)_localctx).tipo = tipo();
				 ((RetornoContext)_localctx).ast =  ((RetornoContext)_localctx).tipo.ast; 
				}
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				 ((RetornoContext)_localctx).ast =  new TipoVoid(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalesContext extends ParserRuleContext {
		public List<Definicion_variable_local> ast = new ArrayList<Definicion_variable_local>();
		public Definicion_variable_localContext definicion_variable_local;
		public List<Definicion_variable_localContext> definicion_variable_local() {
			return getRuleContexts(Definicion_variable_localContext.class);
		}
		public Definicion_variable_localContext definicion_variable_local(int i) {
			return getRuleContext(Definicion_variable_localContext.class,i);
		}
		public LocalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_locales; }
	}

	public final LocalesContext locales() throws RecognitionException {
		LocalesContext _localctx = new LocalesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_locales);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(143);
				((LocalesContext)_localctx).definicion_variable_local = definicion_variable_local();
				 _localctx.ast.add(((LocalesContext)_localctx).definicion_variable_local.ast); 
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definicion_variable_localContext extends ParserRuleContext {
		public Definicion_variable_local ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Definicion_variable_localContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_variable_local; }
	}

	public final Definicion_variable_localContext definicion_variable_local() throws RecognitionException {
		Definicion_variable_localContext _localctx = new Definicion_variable_localContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_definicion_variable_local);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(T__0);
			setState(152);
			((Definicion_variable_localContext)_localctx).IDENT = match(IDENT);
			setState(153);
			match(T__1);
			setState(154);
			((Definicion_variable_localContext)_localctx).tipo = tipo();
			setState(155);
			match(T__2);
			 ((Definicion_variable_localContext)_localctx).ast =  new Definicion_variable_local(((Definicion_variable_localContext)_localctx).IDENT, ((Definicion_variable_localContext)_localctx).tipo.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciasContext extends ParserRuleContext {
		public List<Sentencia> ast = new ArrayList<Sentencia>();
		public SentenciaContext sentencia;
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_sentencias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__16) | (1L << T__17) | (1L << T__24) | (1L << T__25) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << IDENT))) != 0)) {
				{
				{
				setState(158);
				((SentenciasContext)_localctx).sentencia = sentencia();
				 _localctx.ast.add(((SentenciasContext)_localctx).sentencia.ast); 
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
